2010-10-26  Jocelyn Turcotte  <jocelyn.turcotte@nokia.com>

Reviewed by Kenneth Rohde Christiansen.

        [Qt] Fix an assert with QtPixmapInstance creation.
        https://bugs.webkit.org/show_bug.cgi?id=48323

        This places the newly refcounted QtPixmapInstance in a RefPtr
        to prevent an assert on the first ref() call.

        * bridge/qt/qt_pixmapruntime.cpp:
        (JSC::Bindings::QtPixmapInstance::createPixmapRuntimeObject):

Canonical link: https://commits.webkit.org/61089@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@70557 268f45cc-cd09-0410-ab3c-d52691b4dbfc